src/occt/ffi.rs

//! Hand-written FFI to the OCCT C++ wrapper (`cpp/wrapper.cpp` via `cpp/ffi.h`).
//!
//! This replaces the former `#[cxx::bridge]`. The C++ side keeps its OCCT logic
//! in `namespace cadrum` and exposes a thin `extern "C"` shim; here we declare
//! the matching raw signatures (`mod raw`) and wrap them in safe-ish functions
//! that mirror the old bridge API so the rest of `src/occt/` is mostly
//! unchanged. Owned C++ objects are held by [`Owned`] (a `UniquePtr`-like smart
//! pointer); variable-length results are copied out of malloc'd buffers and the
//! buffers freed via `cadrum_free`.

use super::stream::{CReader, CWriter, RustReader, RustWriter};
use std::ffi::c_void;

// ==================== Opaque OCCT topology types ====================
//
// Only ever used behind pointers. The zero-size + PhantomData idiom makes them
// `!Send`/`!Sync`/`!Unpin` and impossible to construct on the Rust side.

#[repr(C)]
pub struct TopoDS_Shape {
	_data: [u8; 0],
	_marker: core::marker::PhantomData<(*mut u8, core::marker::PhantomPinned)>,
}

#[repr(C)]
pub struct TopoDS_Face {
	_data: [u8; 0],
	_marker: core::marker::PhantomData<(*mut u8, core::marker::PhantomPinned)>,
}

#[repr(C)]
pub struct TopoDS_Edge {
	_data: [u8; 0],
	_marker: core::marker::PhantomData<(*mut u8, core::marker::PhantomPinned)>,
}

/// Per-type deallocation (C++ `delete`). Implemented for the three opaque types.
pub trait OcctFree {
	/// # Safety
	/// `ptr` must be a non-null pointer obtained from the C++ side and not yet freed.
	unsafe fn occt_free(ptr: *mut Self);
}

impl OcctFree for TopoDS_Shape {
	unsafe fn occt_free(ptr: *mut Self) {
		raw::cadrum_shape_free(ptr)
	}
}
impl OcctFree for TopoDS_Face {
	unsafe fn occt_free(ptr: *mut Self) {
		raw::cadrum_face_free(ptr)
	}
}
impl OcctFree for TopoDS_Edge {
	unsafe fn occt_free(ptr: *mut Self) {
		raw::cadrum_edge_free(ptr)
	}
}

/// Owned C++ handle — the hand-written replacement for `cxx::UniquePtr<T>`.
///
/// Holds a raw `*mut T` returned by the wrapper and frees it on drop via the
/// matching `cadrum_*_free`. `Deref` yields `&T` (callers rely on deref coercion
/// when passing `&Owned<T>` to functions taking `&T`); `is_null` checks the
/// Rust-level pointer (the FFI returns null on failure).
pub struct Owned<T: OcctFree> {
	ptr: *mut T,
}

impl<T: OcctFree> Owned<T> {
	/// # Safety
	/// `ptr` is either null or a valid owning pointer from the wrapper.
	pub(crate) unsafe fn from_raw(ptr: *mut T) -> Self {
		Owned { ptr }
	}

	pub fn is_null(&self) -> bool {
		self.ptr.is_null()
	}

	pub(crate) fn as_ptr(&self) -> *const T {
		self.ptr as *const T
	}

	pub(crate) fn as_mut_ptr(&mut self) -> *mut T {
		self.ptr
	}
}

impl<T: OcctFree> Drop for Owned<T> {
	fn drop(&mut self) {
		if !self.ptr.is_null() {
			unsafe { T::occt_free(self.ptr) }
		}
	}
}

impl<T: OcctFree> std::ops::Deref for Owned<T> {
	type Target = T;
	fn deref(&self) -> &T {
		// SAFETY: only ever called on a non-null handle — callers check
		// `is_null()` on FFI returns before any deref (matching the previous
		// `cxx::UniquePtr` contract).
		unsafe { &*self.ptr }
	}
}

// Mirrors the previous `unsafe impl Send for TopoDS_*`: an `Owned` handle has
// exclusive ownership and may be *moved* across threads. `Sync` is intentionally
// absent (raw pointer; OCC handle refcounts are non-atomic).
unsafe impl<T: OcctFree> Send for Owned<T> {}

// ==================== Mesh data ====================

/// Triangulated mesh returned by [`mesh_shape`]. Plain Rust struct (the wrapper
/// fills POD arrays which are copied in here).
pub struct MeshData {
	pub vertices: Vec<f64>, // flat xyz
	pub uvs: Vec<f64>,      // flat uv
	pub indices: Vec<u32>,
	pub face_tshape_ids: Vec<u64>, // per-triangle TShape* address
	pub success: bool,
}

/// POD mirror of `CMeshData` in `cpp/ffi.h`.
#[repr(C)]
struct CMeshData {
	vertices: *mut f64,
	vertices_len: usize,
	uvs: *mut f64,
	uvs_len: usize,
	indices: *mut u32,
	indices_len: usize,
	face_ids: *mut u64,
	face_ids_len: usize,
	success: bool,
}

// ==================== Raw extern "C" declarations ====================

mod raw {
	use super::{CMeshData, CReader, CWriter, TopoDS_Edge, TopoDS_Face, TopoDS_Shape};
	use std::ffi::c_void;

	extern "C" {
		pub fn cadrum_free(p: *mut c_void);
		pub fn cadrum_shape_free(p: *mut TopoDS_Shape);
		pub fn cadrum_face_free(p: *mut TopoDS_Face);
		pub fn cadrum_edge_free(p: *mut TopoDS_Edge);

		#[cfg(not(feature = "color"))]
		pub fn read_step_stream(reader: *const CReader) -> *mut TopoDS_Shape;
		#[cfg(not(feature = "color"))]
		pub fn write_step_stream(shape: *const TopoDS_Shape, writer: *const CWriter) -> bool;
		pub fn read_brep_bin_stream(reader: *const CReader) -> *mut TopoDS_Shape;
		pub fn write_brep_bin_stream(shape: *const TopoDS_Shape, writer: *const CWriter) -> bool;
		pub fn read_brep_text_stream(reader: *const CReader) -> *mut TopoDS_Shape;
		pub fn write_brep_text_stream(shape: *const TopoDS_Shape, writer: *const CWriter) -> bool;

		pub fn make_half_space(ox: f64, oy: f64, oz: f64, nx: f64, ny: f64, nz: f64) -> *mut TopoDS_Shape;
		pub fn make_box(x1: f64, y1: f64, z1: f64, x2: f64, y2: f64, z2: f64) -> *mut TopoDS_Shape;
		pub fn make_cylinder(px: f64, py: f64, pz: f64, dx: f64, dy: f64, dz: f64, radius: f64, height: f64) -> *mut TopoDS_Shape;
		pub fn make_sphere(cx: f64, cy: f64, cz: f64, radius: f64) -> *mut TopoDS_Shape;
		pub fn make_cone(px: f64, py: f64, pz: f64, dx: f64, dy: f64, dz: f64, r1: f64, r2: f64, height: f64) -> *mut TopoDS_Shape;
		pub fn make_torus(px: f64, py: f64, pz: f64, dx: f64, dy: f64, dz: f64, r1: f64, r2: f64) -> *mut TopoDS_Shape;
		pub fn make_empty() -> *mut TopoDS_Shape;
		pub fn deep_copy(shape: *const TopoDS_Shape) -> *mut TopoDS_Shape;

		pub fn builder_cells(solids: *const *const TopoDS_Shape, n_solids: usize, clauses: *const i64, n_clauses: usize, out_history: *mut *mut u64, out_history_len: *mut usize) -> *mut TopoDS_Shape;
		pub fn builder_clean(shape: *const TopoDS_Shape, out_history: *mut *mut u64, out_history_len: *mut usize) -> *mut TopoDS_Shape;
		pub fn builder_thick_solid(solid: *const TopoDS_Shape, open_faces: *const *const TopoDS_Face, n_faces: usize, thickness: f64, out_history: *mut *mut u64, out_history_len: *mut usize) -> *mut TopoDS_Shape;
		pub fn builder_fillet(solid: *const TopoDS_Shape, edges: *const *const TopoDS_Edge, n_edges: usize, radius: f64, out_history: *mut *mut u64, out_history_len: *mut usize) -> *mut TopoDS_Shape;
		pub fn builder_chamfer(solid: *const TopoDS_Shape, edges: *const *const TopoDS_Edge, n_edges: usize, distance: f64, out_history: *mut *mut u64, out_history_len: *mut usize) -> *mut TopoDS_Shape;

		pub fn transform_translate(shape: *const TopoDS_Shape, tx: f64, ty: f64, tz: f64) -> *mut TopoDS_Shape;
		pub fn transform_rotate(shape: *const TopoDS_Shape, ox: f64, oy: f64, oz: f64, dx: f64, dy: f64, dz: f64, angle: f64) -> *mut TopoDS_Shape;
		pub fn transform_scale(shape: *const TopoDS_Shape, cx: f64, cy: f64, cz: f64, factor: f64) -> *mut TopoDS_Shape;
		pub fn transform_mirror(shape: *const TopoDS_Shape, ox: f64, oy: f64, oz: f64, nx: f64, ny: f64, nz: f64) -> *mut TopoDS_Shape;

		pub fn shape_is_null(shape: *const TopoDS_Shape) -> bool;
		pub fn shape_is_solid(shape: *const TopoDS_Shape) -> bool;
		pub fn shape_volume(shape: *const TopoDS_Shape) -> f64;
		pub fn shape_surface_area(shape: *const TopoDS_Shape) -> f64;
		pub fn shape_center_of_mass(shape: *const TopoDS_Shape, x: *mut f64, y: *mut f64, z: *mut f64);
		pub fn shape_inertia_tensor(shape: *const TopoDS_Shape, m00: *mut f64, m01: *mut f64, m02: *mut f64, m10: *mut f64, m11: *mut f64, m12: *mut f64, m20: *mut f64, m21: *mut f64, m22: *mut f64);
		pub fn shape_contains_point(shape: *const TopoDS_Shape, x: f64, y: f64, z: f64) -> bool;
		pub fn shape_bounding_box(shape: *const TopoDS_Shape, xmin: *mut f64, ymin: *mut f64, zmin: *mut f64, xmax: *mut f64, ymax: *mut f64, zmax: *mut f64);

		pub fn decompose_into_solids(shape: *const TopoDS_Shape, out_len: *mut usize) -> *mut *mut TopoDS_Shape;
		pub fn compound_add(compound: *mut TopoDS_Shape, child: *const TopoDS_Shape);

		pub fn mesh_shape(shape: *const TopoDS_Shape, linear: f64, angular: f64, relative: bool) -> CMeshData;

		pub fn shape_edges(shape: *const TopoDS_Shape, out_len: *mut usize) -> *mut *mut TopoDS_Edge;
		pub fn shape_faces(shape: *const TopoDS_Shape, out_len: *mut usize) -> *mut *mut TopoDS_Face;
		pub fn face_edges(face: *const TopoDS_Face, out_len: *mut usize) -> *mut *mut TopoDS_Edge;
		pub fn clone_shape_handle(shape: *const TopoDS_Shape) -> *mut TopoDS_Shape;

		pub fn face_tshape_id(face: *const TopoDS_Face) -> u64;
		pub fn shape_tshape_id(shape: *const TopoDS_Shape) -> u64;
		pub fn edge_tshape_id(edge: *const TopoDS_Edge) -> u64;
		pub fn face_project_point(face: *const TopoDS_Face, px: f64, py: f64, pz: f64, cpx: *mut f64, cpy: *mut f64, cpz: *mut f64, nx: *mut f64, ny: *mut f64, nz: *mut f64) -> bool;

		pub fn edge_approximation_segments(edge: *const TopoDS_Edge, linear: f64, angular: f64, relative: bool, out_len: *mut usize) -> *mut f64;
		pub fn make_helix_edge(ax: f64, ay: f64, az: f64, xrx: f64, xry: f64, xrz: f64, radius: f64, pitch: f64, height: f64) -> *mut TopoDS_Edge;
		pub fn make_polygon_edges(coords: *const f64, n_coords: usize, out_len: *mut usize) -> *mut *mut TopoDS_Edge;
		pub fn make_circle_edge(ax: f64, ay: f64, az: f64, radius: f64) -> *mut TopoDS_Edge;
		pub fn make_line_edge(ax: f64, ay: f64, az: f64, bx: f64, by: f64, bz: f64) -> *mut TopoDS_Edge;
		pub fn make_arc_edge(sx: f64, sy: f64, sz: f64, mx: f64, my: f64, mz: f64, ex: f64, ey: f64, ez: f64) -> *mut TopoDS_Edge;
		pub fn make_bspline_edge(coords: *const f64, n_coords: usize, end_kind: u32, sx: f64, sy: f64, sz: f64, ex: f64, ey: f64, ez: f64) -> *mut TopoDS_Edge;
		pub fn edge_endpoints(edge: *const TopoDS_Edge, sx: *mut f64, sy: *mut f64, sz: *mut f64, ex: *mut f64, ey: *mut f64, ez: *mut f64);
		pub fn edge_tangents(edge: *const TopoDS_Edge, sx: *mut f64, sy: *mut f64, sz: *mut f64, ex: *mut f64, ey: *mut f64, ez: *mut f64);
		pub fn edge_is_closed(edge: *const TopoDS_Edge) -> bool;
		pub fn edge_project_point(edge: *const TopoDS_Edge, px: f64, py: f64, pz: f64, cpx: *mut f64, cpy: *mut f64, cpz: *mut f64, tx: *mut f64, ty: *mut f64, tz: *mut f64) -> bool;
		pub fn deep_copy_edge(edge: *const TopoDS_Edge) -> *mut TopoDS_Edge;
		pub fn translate_edge(edge: *const TopoDS_Edge, tx: f64, ty: f64, tz: f64) -> *mut TopoDS_Edge;
		pub fn rotate_edge(edge: *const TopoDS_Edge, ox: f64, oy: f64, oz: f64, dx: f64, dy: f64, dz: f64, angle: f64) -> *mut TopoDS_Edge;
		pub fn scale_edge(edge: *const TopoDS_Edge, cx: f64, cy: f64, cz: f64, factor: f64) -> *mut TopoDS_Edge;
		pub fn mirror_edge(edge: *const TopoDS_Edge, ox: f64, oy: f64, oz: f64, nx: f64, ny: f64, nz: f64) -> *mut TopoDS_Edge;
		pub fn make_extrude(profile_edges: *const *const TopoDS_Edge, n_profile: usize, dx: f64, dy: f64, dz: f64) -> *mut TopoDS_Shape;
		pub fn make_pipe_shell(all_edges: *const *const TopoDS_Edge, n_all: usize, spine_edges: *const *const TopoDS_Edge, n_spine: usize, orient: u32, ux: f64, uy: f64, uz: f64, aux_spine_edges: *const *const TopoDS_Edge, n_aux: usize) -> *mut TopoDS_Shape;
		pub fn make_loft(all_edges: *const *const TopoDS_Edge, n_all: usize, ruled: bool) -> *mut TopoDS_Shape;
		pub fn make_sewn_solid(faces: *const *const TopoDS_Face, n_faces: usize, tolerance: f64) -> *mut TopoDS_Shape;
		pub fn make_offset_shape(shape: *const TopoDS_Shape, offset: f64, tolerance: f64) -> *mut TopoDS_Shape;
		pub fn make_bspline_solid(coords: *const f64, n_coords: usize, nu: u32, nv: u32, u_periodic: bool) -> *mut TopoDS_Shape;
